0.25.0 (unreleased)
-------------------
 - Add support for duplicate namespace definitions. Previously imports for
   namespaces which were already imported were ignored. It will now search
   through all matching schemas with the tns to find a specific object (#204)


0.24.0 (2016-12-16)
-------------------
 - Don't fail the parsing of responses if an xsi:type references an non-existing
   type. Instead log a message (#273)
 - Fix serializing etree.Element instances in the helpers.serialize function
   (#255)
 - Fix infinite loop during parsing of xsd.Sequence where max_occurs is 
   unbounded (#256)
 - Make the xsd.Element name kwarg required
 - Improve handling of the xsd:anyType element when passed instances of 
   complexType's (#252)
 - Silently ignore unsupported binding transports instead of an hard error 
   (#277)
 - Support microseconds for xsd.dateTime and xsd.Time (#280)
 - Don't mutate passed values to the zeep operations (#280)


0.23.0 (2016-11-24)
-------------------
 - Add Client.set_default_soapheaders() to set soapheaders which are to be used
   on all operations done via the client object.
 - Add basic support for asyncio using aiohttp. Many thanks to chrisimcevoy
   for the initial implementation! Please see 
   https://github.com/mvantellingen/python-zeep/pull/207 and
   https://github.com/mvantellingen/python-zeep/pull/251 for more information
 - Fix recursion error when generating the call signature (jaceksnet, #264)


0.22.1 (2016-11-22)
-------------------
 - Fix reversed() error (jaceksnet) (#260)
 - Better error message when unexpected xml elements are encountered in 
   sequences.


0.22.0 (2016-11-13)
-------------------
 - Force the soap:address / http:address to HTTPS when the wsdl is loaded from
   a https url (#228)
 - Improvements to the xsd:union handling. The matching base class is now used
   for serializing/deserializing the values. If there is no matching base class 
   then the raw value is returned. (#195)