@@ -3,6 +3,7 @@
  - Add support for duplicate namespace definitions. Previously imports for
    namespaces which were already imported were ignored. It will now search
    through all matching schemas with the tns to find a specific object (#204)
+ - Fix xsd:extension for sequence -> choice. (#257)
 
 
 0.24.0 (2016-12-16)
